force-app/main/default/objects/TCL_Attendee__c/TCL_Attendee__c.object-meta.xml
<CustomObject>
    <label>Attendee</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Attendee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>