force-app/main/default/objects/TCL_Attendee__c/fields/Attendee_Employee__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee (Employee)</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Attendee</relationshipLabel>
    <relationshipName>Learning_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>