force-app/main/default/objects/TCL_Attendee__c/fields/Attendee_User__c.field-meta.xml
<CustomField>
    <fullName>Attendee_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Learning_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>