force-app/main/default/objects/TCL_Attendee__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <label>Complete</label>
    <type>DateTime</type>
</CustomField>