force-app/main/default/objects/TCL_Attendee__c/recordTypes/Participate.recordType-meta.xml
<RecordType>
    <fullName>Participate</fullName>
    <active>true</active>
    <label>Participate</label>
</RecordType>